--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,22 +1,22 @@
-# SQLite version 3.x
-#   gem install sqlite3-ruby (not necessary on OS X Leopard)
-development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+DEFAULTS: &DEFAULTS
+  adapter: mysql
+  encoding: utf8
   pool: 5
-  timeout: 5000
+  username: username
+  password: pwd
+  socket: /var/run/mysqld/mysqld.sock 
+
+development:
+  database: zbs_development
+  <<: *DEFAULTS
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  database: zbs_test
+  <<: *DEFAULTS
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  database: zbs_production
+  <<: *DEFAULTS
